# docgen

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docgen/: cli.py  config.py  interactive.py
docgen/generator/: openai_generator.py  templates.py
docgen/patcher/: js_patcher.py  python_patcher.py
docgen/scanner/: base.py  js_scanner.py  python_scanner.py
tests/: test_js_scanner.py  test_patcher.py  test_python_scanner.py
tests/fixtures/: sample_undocumented.js  sample_undocumented.py
