[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docgen-ai"
version = "0.1.0"
description = "CLI tool to generate docstrings for undocumented code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]==0.12.3",
    "rich==13.7.1",
    "openai==1.14.2",
    "python-dotenv==1.0.1",
    "pydantic==2.6.4",
    "libcst==1.3.1",
    "pathspec==0.12.1"
]

[project.scripts]
docgen = "docgen.cli:app"

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0"
]
